# wirespec

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  build.gradle.kts  gradle.properties  package-lock.json  package.json  settings.gradle.kts  wirespec.rb
.claude/: settings.local.json
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml  (+2 more)
compiler/: build.gradle.kts
docs/: docusaurus.config.ts  package-lock.json  package.json
examples/: Makefile  README.md  pom.xml
examples/python-todo/: .gitignore  README.md  generate.sh  pyproject.toml  requirements.txt
examples/python-todo/tests/: __init__.py  test_client.py
examples/python-todo/wirespec/: todo.ws
examples/rust-petstore/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  gen.sh  generate.sh
examples/rust-petstore/src/: actix.rs  client.rs  lib.rs  serialization.rs  server.rs  service.rs  transportation.rs
examples/rust-petstore/tests/: integration.rs
gradle/: libs.versions.toml
mock-server/: package-lock.json  package.json
openapi/: build.gradle.kts
plugins/: shared-settings.gradle.kts
scripts/: all.sh  build.sh  clean.sh  compile.sh  compileTypes.sh  example.sh  format.sh  image.sh  jvm.sh  linux.sh  local.sh  mac.sh  publish.sh  run.sh  test.sh  update.sh  verify.sh  yolo.sh
test/: clean.sh
types/: bar.ws  baz.ws  clean.sh  endpoint.ws  enum.ws  foo.ws  todos.ws
verify/: todo.ws
(+2351 files in other folders)
