[package]
name = "wirespec-petstore"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
serde = "1"
serde_json = "1"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
actix-web = "4"
tokio = { version = "1", features = ["full"] }
